# Nonebot-Kei

./: .gitignore  Deploy.bat  README.md  Run.bat  pyproject.toml  requirements.txt
plugins/nonebot_plugin_fortune/: __init__.py  config.py  data_source.py  download.py  utils.py
