[project]
name = "Kei"
version = "0.1.0"
description = "Kei"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
#    {name = "Kritor", module_name = "nonebot.adapters.kritor"}
]
plugins = [
    "nonebot_plugin_analysis_bilibili",
    "nonebot_plugin_emojimix",
    "nonebot_plugin_learning_chat",
    "nonebot_plugin_memes",
    "nonebot_plugin_multincm",
    "nonebot_plugin_who_at_me",
    "nonebot_plugin_withdraw",
]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
