[project]
name = "Kei"
version = "1.4.1"
description = "Kei"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
#    {name = "Kritor", module_name = "nonebot.adapters.kritor"}
]
plugins = [
    "nonebot_plugin_alias",
    "nonebot_plugin_analysis_bilibili",
    "nonebot_plugin_blacklist",
    "nonebot_plugin_emojimix",
    "nonebot_plugin_fakemsg",
    "nonebot_plugin_fishing",
    "nonebot_plugin_learning_chat",
    "nonebot_plugin_memes",
    "nonebot_plugin_multincm",
    "nonebot_plugin_questionmark",
    "nonebot_plugin_treehelp",
    "nonebot_plugin_who_at_me",
    "nonebot_plugin_withdraw",
    "nonebot_plugin_wordle",
]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
